# CallGraphGenerator

./: Cargo.toml  README.md  callgraph.dot
.github/: copilot-instructions.md
src/: analyzer.rs  config.rs  lib.rs  lsp.rs  main.rs  output.rs
tests/: integration_tests.rs
