[package]
name = "call-graph-generator"
version = "0.1.0"
edition = "2021"
description = "A call graph generator tool that leverages LSP to analyze function call relationships"
license = "MIT"
repository = "https://github.com/yourusername/CallGraphGenerator"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "call-graph-generator"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Configuration file handling
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# LSP communication
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system operations
walkdir = "2.0"

# Async runtime
futures = "0.3"

# Graph data structures
petgraph = "0.6"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
